--- a/SampleAspNetWebApplication/packages.config
+++ b/SampleAspNetWebApplication/packages.config
@@ -8,12 +8,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net452" />
-  <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.17.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
-  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
